src/test/deca/context/invalid/created/double_declaration_bool.deca
{
bool a;
bool a; // a est déclaré deux fois
}